// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Apps/Punch Card App 1`] = `
<div>
  <div
    className="ms-Stack css-131"
  >
    <div
      className="ms-StackItem css-66"
    >
      <form
        onSubmit={[Function]}
      >
        <div
          className="ms-Stack css-131"
        >
          <div
            className="ms-TextField root-132"
          >
            <div
              className="ms-TextField-wrapper"
            >
              <div
                className="ms-TextField-fieldGroup fieldGroup-70"
              >
                <input
                  aria-invalid={false}
                  className="ms-TextField-field field-71"
                  id="TextField96"
                  onBlur={[Function]}
                  onChange={[Function]}
                  onFocus={[Function]}
                  onInput={[Function]}
                  placeholder="Punch Card Title..."
                  type="text"
                  value=""
                />
              </div>
            </div>
          </div>
          <button
            aria-disabled={true}
            className="ms-Button ms-Button--icon is-disabled ms-hiddenMdUp root-133"
            data-is-focusable={false}
            disabled={true}
            onClick={[Function]}
            onKeyDown={[Function]}
            onKeyPress={[Function]}
            onKeyUp={[Function]}
            onMouseDown={[Function]}
            onMouseUp={[Function]}
            title="Add Punch Card"
            type="submit"
          >
            <span
              className="ms-Button-flexContainer flexContainer-83"
              data-automationid="splitbuttonprimary"
            >
              <i
                aria-hidden={true}
                className="ms-Icon root-37 css-87 ms-Button-icon icon-134"
                data-icon-name="Add"
                role="presentation"
                style={
                  Object {
                    "fontFamily": "\\"FabricMDL2Icons\\"",
                  }
                }
              >
                
              </i>
            </span>
          </button>
          <button
            aria-disabled={true}
            className="ms-Button ms-Button--primary is-disabled ms-hiddenSm root-136"
            data-is-focusable={false}
            disabled={true}
            onClick={[Function]}
            onKeyDown={[Function]}
            onKeyPress={[Function]}
            onKeyUp={[Function]}
            onMouseDown={[Function]}
            onMouseUp={[Function]}
            title="Add Punch Card"
            type="submit"
          >
            <span
              className="ms-Button-flexContainer flexContainer-83"
              data-automationid="splitbuttonprimary"
            >
              <i
                aria-hidden={true}
                className="ms-Icon root-37 css-87 ms-Button-icon icon-134"
                data-icon-name="Add"
                role="presentation"
                style={
                  Object {
                    "fontFamily": "\\"FabricMDL2Icons\\"",
                  }
                }
              >
                
              </i>
              <span
                className="ms-Button-textContainer textContainer-84"
              >
                <span
                  className="ms-Button-label label-123"
                  id="id__102"
                >
                  Add Punch Card
                </span>
              </span>
            </span>
          </button>
        </div>
      </form>
    </div>
    <div
      className="ms-StackItem css-66"
    >
      <button
        aria-disabled={true}
        className="ms-Button ms-Button--icon is-disabled ms-hiddenMdUp root-133"
        data-is-focusable={false}
        disabled={true}
        onClick={[Function]}
        onKeyDown={[Function]}
        onKeyPress={[Function]}
        onKeyUp={[Function]}
        onMouseDown={[Function]}
        onMouseUp={[Function]}
        type="button"
      >
        <span
          className="ms-Button-flexContainer flexContainer-83"
          data-automationid="splitbuttonprimary"
        >
          <i
            aria-hidden={true}
            className="ms-Icon root-37 css-137 ms-Button-icon icon-134"
            data-icon-name="OpenPane"
            role="presentation"
            style={
              Object {
                "fontFamily": "\\"FabricMDL2Icons-1\\"",
              }
            }
          >
            
          </i>
          <span
            className="ms-Button-textContainer textContainer-84"
          />
        </span>
      </button>
      <button
        aria-disabled={true}
        className="ms-Button ms-Button--default is-disabled ms-hiddenSm root-138"
        data-is-focusable={false}
        disabled={true}
        onClick={[Function]}
        onKeyDown={[Function]}
        onKeyPress={[Function]}
        onKeyUp={[Function]}
        onMouseDown={[Function]}
        onMouseUp={[Function]}
        type="button"
      >
        <span
          className="ms-Button-flexContainer flexContainer-83"
          data-automationid="splitbuttonprimary"
        >
          <i
            aria-hidden={true}
            className="ms-Icon root-37 css-137 ms-Button-icon icon-134"
            data-icon-name="OpenPane"
            role="presentation"
            style={
              Object {
                "fontFamily": "\\"FabricMDL2Icons-1\\"",
              }
            }
          >
            
          </i>
          <span
            className="ms-Button-textContainer textContainer-84"
          >
            <span
              className="ms-Button-label label-123"
              id="id__108"
            >
              Show Punch Cards
            </span>
          </span>
        </span>
      </button>
    </div>
  </div>
</div>
`;

exports[`Storyshots Apps/Punch Card Desktop 1`] = `
<div
  className="ms-Grid"
>
  <div
    className="ms-Grid-row"
  >
    <div
      className="ms-Grid-col ms-sm12 ms-md8 ms-lg8 ms-xl6"
    >
      <span
        className="css-64"
      >
        <h2>
          My Punch Card
        </h2>
      </span>
    </div>
  </div>
  <div
    className="ms-Grid-row"
  >
    <div
      className="ms-Grid-col ms-sm12 ms-md6"
    >
      <span
        className="css-64"
      >
        <h3>
          Goal For The Day
        </h3>
      </span>
      <div
        className="ms-Stack css-65"
      >
        <div
          className="ms-StackItem css-66"
        >
          <div
            className="ms-Stack css-67"
          >
            <div
              className="ms-TextField timeInput-69"
            >
              <div
                className="ms-TextField-wrapper"
              >
                <div
                  className="ms-Stack css-80"
                >
                  <label
                    className="ms-Label root-81"
                  >
                    Hours
                  </label>
                  <button
                    className="ms-Button ms-Button--icon root-82"
                    data-is-focusable={true}
                    id="id__77"
                    onClick={[Function]}
                    onKeyDown={[Function]}
                    onKeyPress={[Function]}
                    onKeyUp={[Function]}
                    onMouseDown={[Function]}
                    onMouseUp={[Function]}
                    title="Info"
                    type="button"
                  >
                    <span
                      className="ms-Button-flexContainer flexContainer-83"
                      data-automationid="splitbuttonprimary"
                    >
                      <i
                        aria-hidden={true}
                        className="ms-Icon root-37 css-87 ms-Button-icon icon-85"
                        data-icon-name="Info"
                        role="presentation"
                        style={
                          Object {
                            "fontFamily": "\\"FabricMDL2Icons\\"",
                          }
                        }
                      >
                        
                      </i>
                    </span>
                  </button>
                </div>
                <div
                  className="ms-TextField-fieldGroup fieldGroup-70"
                >
                  <input
                    aria-invalid={false}
                    aria-labelledby="TextFieldLabel76"
                    className="ms-TextField-field field-71"
                    id="TextField74"
                    onBlur={[Function]}
                    onChange={[Function]}
                    onFocus={[Function]}
                    onInput={[Function]}
                    type="number"
                    value="09"
                  />
                </div>
              </div>
            </div>
            <div
              className="ms-TextField timeInput-69"
            >
              <div
                className="ms-TextField-wrapper"
              >
                <div
                  className="ms-Stack css-80"
                >
                  <label
                    className="ms-Label root-81"
                  >
                    Minutes
                  </label>
                  <button
                    className="ms-Button ms-Button--icon root-82"
                    data-is-focusable={true}
                    id="id__84"
                    onClick={[Function]}
                    onKeyDown={[Function]}
                    onKeyPress={[Function]}
                    onKeyUp={[Function]}
                    onMouseDown={[Function]}
                    onMouseUp={[Function]}
                    title="Info"
                    type="button"
                  >
                    <span
                      className="ms-Button-flexContainer flexContainer-83"
                      data-automationid="splitbuttonprimary"
                    >
                      <i
                        aria-hidden={true}
                        className="ms-Icon root-37 css-87 ms-Button-icon icon-85"
                        data-icon-name="Info"
                        role="presentation"
                        style={
                          Object {
                            "fontFamily": "\\"FabricMDL2Icons\\"",
                          }
                        }
                      >
                        
                      </i>
                    </span>
                  </button>
                </div>
                <div
                  className="ms-TextField-fieldGroup fieldGroup-70"
                >
                  <input
                    aria-invalid={false}
                    aria-labelledby="TextFieldLabel83"
                    className="ms-TextField-field field-71"
                    id="TextField81"
                    onBlur={[Function]}
                    onChange={[Function]}
                    onFocus={[Function]}
                    onInput={[Function]}
                    type="number"
                    value="00"
                  />
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          className="ms-StackItem css-66"
        >
          <div
            className="ms-MessageBar ms-MessageBar-multiline infoBar-88"
          >
            <div
              className="ms-MessageBar-content content-89"
            >
              <div
                aria-hidden={true}
                className="ms-MessageBar-icon iconContainer-90"
              >
                <i
                  aria-hidden={true}
                  className="icon-97"
                  data-icon-name="Info"
                >
                  
                </i>
              </div>
              <div
                aria-live="polite"
                className="ms-MessageBar-text text-92"
                id="MessageBar88"
                role="status"
              >
                <span
                  className="ms-MessageBar-innerText innerText-93"
                />
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
  <br />
  <div
    className="ms-Grid-row"
  >
    <div
      className="ms-Grid-col ms-sm-12 ms-md6"
    >
      <div
        className="ms-Stack css-98"
      >
        <div
          className="ms-StackItem css-99"
        >
          <span
            className="css-64"
          >
            <h3>
              Punched
            </h3>
          </span>
          <div
            className="ms-Viewport"
            style={
              Object {
                "minHeight": 1,
                "minWidth": 1,
              }
            }
          >
            <div
              className="ms-DetailsList is-horizontalConstrained root-100"
              data-automationid="DetailsList"
              data-is-scrollable="false"
            >
              <div
                aria-colcount={1}
                aria-readonly="true"
                aria-rowcount={1}
                role="grid"
              >
                <div
                  className="ms-DetailsList-headerWrapper"
                  onKeyDown={[Function]}
                  role="presentation"
                >
                  <div
                    className="ms-FocusZone css-53 ms-DetailsHeader root-102"
                    data-automationid="DetailsHeader"
                    data-focuszone-id="FocusZone90"
                    onFocus={[Function]}
                    onKeyDown={[Function]}
                    onMouseDownCapture={[Function]}
                    onMouseMove={[Function]}
                    role="row"
                  >
                    <div
                      aria-colindex={1}
                      aria-labelledby="header89-check"
                      className="ms-DetailsHeader-cell ms-DetailsHeader-cellIsCheck cellIsCheck-105"
                      onClick={[Function]}
                      role="columnheader"
                    >
                      <span
                        className="ms-DetailsHeader-checkTooltip"
                      >
                        <div
                          aria-checked={false}
                          className="ms-DetailsRow-check ms-DetailsHeader-check check-103 ms-DetailsRow-check--isHeader ms-Check-checkHost check-118"
                          data-automationid="DetailsRowCheck"
                          data-is-focusable={true}
                          data-selection-toggle={true}
                          id="header89-check"
                          role="checkbox"
                        >
                          <div
                            className="ms-Check root-119"
                          >
                            <i
                              aria-hidden={true}
                              className="ms-Icon root-37 css-87 ms-Check-circle circle-120"
                              data-icon-name="CircleRing"
                              role="presentation"
                              style={
                                Object {
                                  "fontFamily": "\\"FabricMDL2Icons\\"",
                                }
                              }
                            >
                              
                            </i>
                            <i
                              aria-hidden={true}
                              className="ms-Icon root-37 css-87 ms-Check-check check-121"
                              data-icon-name="StatusCircleCheckmark"
                              role="presentation"
                              style={
                                Object {
                                  "fontFamily": "\\"FabricMDL2Icons\\"",
                                }
                              }
                            >
                              
                            </i>
                          </div>
                        </div>
                      </span>
                    </div>
                  </div>
                </div>
                <div
                  className="ms-DetailsList-contentWrapper"
                  onKeyDown={[Function]}
                  role="presentation"
                >
                  <div
                    className="ms-SelectionZone"
                    onClick={[Function]}
                    onContextMenu={[Function]}
                    onDoubleClick={[Function]}
                    onFocusCapture={[Function]}
                    onKeyDown={[Function]}
                    onKeyDownCapture={[Function]}
                    onMouseDown={[Function]}
                    onMouseDownCapture={[Function]}
                    role="presentation"
                  >
                    <div
                      className="ms-FocusZone css-53 focusZone-101"
                      data-focuszone-id="FocusZone91"
                      onBlur={[Function]}
                      onFocus={[Function]}
                      onKeyDown={[Function]}
                      onMouseDownCapture={[Function]}
                    >
                      <div
                        className="ms-List"
                      >
                        <div
                          className="ms-List-surface"
                          role="presentation"
                        />
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
          <br />
        </div>
        <div
          className="ms-StackItem css-66"
        >
          <button
            className="ms-Button ms-Button--primary root-122"
            data-is-focusable={true}
            onClick={[Function]}
            onKeyDown={[Function]}
            onKeyPress={[Function]}
            onKeyUp={[Function]}
            onMouseDown={[Function]}
            onMouseUp={[Function]}
            type="button"
          >
            <span
              className="ms-Button-flexContainer flexContainer-83"
              data-automationid="splitbuttonprimary"
            />
          </button>
        </div>
      </div>
      <div
        dir="ltr"
      >
        <div
          className="ms-TooltipHost root-124"
          onBlurCapture={[Function]}
          onFocusCapture={[Function]}
          onKeyDown={[Function]}
          onMouseEnter={[Function]}
          onMouseLeave={[Function]}
        >
          <div
            className="ms-ProgressIndicator root-125"
          >
            <div
              className="ms-ProgressIndicator-itemName itemName-126"
            >
              Punched
            </div>
            <div
              className="ms-ProgressIndicator-itemProgress itemProgress-128"
            >
              <div
                className="ms-ProgressIndicator-progressTrack progressTrack-129"
              />
              <div
                aria-valuemax={100}
                aria-valuemin={0}
                aria-valuenow={20}
                className="ms-ProgressIndicator-progressBar progressBar-130"
                role="progressbar"
                style={
                  Object {
                    "transition": undefined,
                    "width": "20%",
                  }
                }
              />
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Apps/Punch Card Large Mobile 1`] = `
<div
  className="ms-Grid"
>
  <div
    className="ms-Grid-row"
  >
    <div
      className="ms-Grid-col ms-sm12 ms-md8 ms-lg8 ms-xl6"
    >
      <span
        className="css-64"
      >
        <h2>
          My Punch Card
        </h2>
      </span>
    </div>
  </div>
  <div
    className="ms-Grid-row"
  >
    <div
      className="ms-Grid-col ms-sm12 ms-md6"
    >
      <span
        className="css-64"
      >
        <h3>
          Goal For The Day
        </h3>
      </span>
      <div
        className="ms-Stack css-65"
      >
        <div
          className="ms-StackItem css-66"
        >
          <div
            className="ms-Stack css-67"
          >
            <div
              className="ms-TextField timeInput-69"
            >
              <div
                className="ms-TextField-wrapper"
              >
                <div
                  className="ms-Stack css-80"
                >
                  <label
                    className="ms-Label root-81"
                  >
                    Hours
                  </label>
                  <button
                    className="ms-Button ms-Button--icon root-82"
                    data-is-focusable={true}
                    id="id__33"
                    onClick={[Function]}
                    onKeyDown={[Function]}
                    onKeyPress={[Function]}
                    onKeyUp={[Function]}
                    onMouseDown={[Function]}
                    onMouseUp={[Function]}
                    title="Info"
                    type="button"
                  >
                    <span
                      className="ms-Button-flexContainer flexContainer-83"
                      data-automationid="splitbuttonprimary"
                    >
                      <i
                        aria-hidden={true}
                        className="ms-Icon root-37 css-87 ms-Button-icon icon-85"
                        data-icon-name="Info"
                        role="presentation"
                        style={
                          Object {
                            "fontFamily": "\\"FabricMDL2Icons\\"",
                          }
                        }
                      >
                        
                      </i>
                    </span>
                  </button>
                </div>
                <div
                  className="ms-TextField-fieldGroup fieldGroup-70"
                >
                  <input
                    aria-invalid={false}
                    aria-labelledby="TextFieldLabel32"
                    className="ms-TextField-field field-71"
                    id="TextField30"
                    onBlur={[Function]}
                    onChange={[Function]}
                    onFocus={[Function]}
                    onInput={[Function]}
                    type="number"
                    value="09"
                  />
                </div>
              </div>
            </div>
            <div
              className="ms-TextField timeInput-69"
            >
              <div
                className="ms-TextField-wrapper"
              >
                <div
                  className="ms-Stack css-80"
                >
                  <label
                    className="ms-Label root-81"
                  >
                    Minutes
                  </label>
                  <button
                    className="ms-Button ms-Button--icon root-82"
                    data-is-focusable={true}
                    id="id__40"
                    onClick={[Function]}
                    onKeyDown={[Function]}
                    onKeyPress={[Function]}
                    onKeyUp={[Function]}
                    onMouseDown={[Function]}
                    onMouseUp={[Function]}
                    title="Info"
                    type="button"
                  >
                    <span
                      className="ms-Button-flexContainer flexContainer-83"
                      data-automationid="splitbuttonprimary"
                    >
                      <i
                        aria-hidden={true}
                        className="ms-Icon root-37 css-87 ms-Button-icon icon-85"
                        data-icon-name="Info"
                        role="presentation"
                        style={
                          Object {
                            "fontFamily": "\\"FabricMDL2Icons\\"",
                          }
                        }
                      >
                        
                      </i>
                    </span>
                  </button>
                </div>
                <div
                  className="ms-TextField-fieldGroup fieldGroup-70"
                >
                  <input
                    aria-invalid={false}
                    aria-labelledby="TextFieldLabel39"
                    className="ms-TextField-field field-71"
                    id="TextField37"
                    onBlur={[Function]}
                    onChange={[Function]}
                    onFocus={[Function]}
                    onInput={[Function]}
                    type="number"
                    value="00"
                  />
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          className="ms-StackItem css-66"
        >
          <div
            className="ms-MessageBar ms-MessageBar-multiline infoBar-88"
          >
            <div
              className="ms-MessageBar-content content-89"
            >
              <div
                aria-hidden={true}
                className="ms-MessageBar-icon iconContainer-90"
              >
                <i
                  aria-hidden={true}
                  className="icon-97"
                  data-icon-name="Info"
                >
                  
                </i>
              </div>
              <div
                aria-live="polite"
                className="ms-MessageBar-text text-92"
                id="MessageBar44"
                role="status"
              >
                <span
                  className="ms-MessageBar-innerText innerText-93"
                />
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
  <br />
  <div
    className="ms-Grid-row"
  >
    <div
      className="ms-Grid-col ms-sm-12 ms-md6"
    >
      <div
        className="ms-Stack css-98"
      >
        <div
          className="ms-StackItem css-99"
        >
          <span
            className="css-64"
          >
            <h3>
              Punched
            </h3>
          </span>
          <div
            className="ms-Viewport"
            style={
              Object {
                "minHeight": 1,
                "minWidth": 1,
              }
            }
          >
            <div
              className="ms-DetailsList is-horizontalConstrained root-100"
              data-automationid="DetailsList"
              data-is-scrollable="false"
            >
              <div
                aria-colcount={1}
                aria-readonly="true"
                aria-rowcount={1}
                role="grid"
              >
                <div
                  className="ms-DetailsList-headerWrapper"
                  onKeyDown={[Function]}
                  role="presentation"
                >
                  <div
                    className="ms-FocusZone css-53 ms-DetailsHeader root-102"
                    data-automationid="DetailsHeader"
                    data-focuszone-id="FocusZone46"
                    onFocus={[Function]}
                    onKeyDown={[Function]}
                    onMouseDownCapture={[Function]}
                    onMouseMove={[Function]}
                    role="row"
                  >
                    <div
                      aria-colindex={1}
                      aria-labelledby="header45-check"
                      className="ms-DetailsHeader-cell ms-DetailsHeader-cellIsCheck cellIsCheck-105"
                      onClick={[Function]}
                      role="columnheader"
                    >
                      <span
                        className="ms-DetailsHeader-checkTooltip"
                      >
                        <div
                          aria-checked={false}
                          className="ms-DetailsRow-check ms-DetailsHeader-check check-103 ms-DetailsRow-check--isHeader ms-Check-checkHost check-118"
                          data-automationid="DetailsRowCheck"
                          data-is-focusable={true}
                          data-selection-toggle={true}
                          id="header45-check"
                          role="checkbox"
                        >
                          <div
                            className="ms-Check root-119"
                          >
                            <i
                              aria-hidden={true}
                              className="ms-Icon root-37 css-87 ms-Check-circle circle-120"
                              data-icon-name="CircleRing"
                              role="presentation"
                              style={
                                Object {
                                  "fontFamily": "\\"FabricMDL2Icons\\"",
                                }
                              }
                            >
                              
                            </i>
                            <i
                              aria-hidden={true}
                              className="ms-Icon root-37 css-87 ms-Check-check check-121"
                              data-icon-name="StatusCircleCheckmark"
                              role="presentation"
                              style={
                                Object {
                                  "fontFamily": "\\"FabricMDL2Icons\\"",
                                }
                              }
                            >
                              
                            </i>
                          </div>
                        </div>
                      </span>
                    </div>
                  </div>
                </div>
                <div
                  className="ms-DetailsList-contentWrapper"
                  onKeyDown={[Function]}
                  role="presentation"
                >
                  <div
                    className="ms-SelectionZone"
                    onClick={[Function]}
                    onContextMenu={[Function]}
                    onDoubleClick={[Function]}
                    onFocusCapture={[Function]}
                    onKeyDown={[Function]}
                    onKeyDownCapture={[Function]}
                    onMouseDown={[Function]}
                    onMouseDownCapture={[Function]}
                    role="presentation"
                  >
                    <div
                      className="ms-FocusZone css-53 focusZone-101"
                      data-focuszone-id="FocusZone47"
                      onBlur={[Function]}
                      onFocus={[Function]}
                      onKeyDown={[Function]}
                      onMouseDownCapture={[Function]}
                    >
                      <div
                        className="ms-List"
                      >
                        <div
                          className="ms-List-surface"
                          role="presentation"
                        />
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
          <br />
        </div>
        <div
          className="ms-StackItem css-66"
        >
          <button
            className="ms-Button ms-Button--primary root-122"
            data-is-focusable={true}
            onClick={[Function]}
            onKeyDown={[Function]}
            onKeyPress={[Function]}
            onKeyUp={[Function]}
            onMouseDown={[Function]}
            onMouseUp={[Function]}
            type="button"
          >
            <span
              className="ms-Button-flexContainer flexContainer-83"
              data-automationid="splitbuttonprimary"
            />
          </button>
        </div>
      </div>
      <div
        dir="ltr"
      >
        <div
          className="ms-TooltipHost root-124"
          onBlurCapture={[Function]}
          onFocusCapture={[Function]}
          onKeyDown={[Function]}
          onMouseEnter={[Function]}
          onMouseLeave={[Function]}
        >
          <div
            className="ms-ProgressIndicator root-125"
          >
            <div
              className="ms-ProgressIndicator-itemName itemName-126"
            >
              Punched
            </div>
            <div
              className="ms-ProgressIndicator-itemProgress itemProgress-128"
            >
              <div
                className="ms-ProgressIndicator-progressTrack progressTrack-129"
              />
              <div
                aria-valuemax={100}
                aria-valuemin={0}
                aria-valuenow={20}
                className="ms-ProgressIndicator-progressBar progressBar-130"
                role="progressbar"
                style={
                  Object {
                    "transition": undefined,
                    "width": "20%",
                  }
                }
              />
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Apps/Punch Card Small Mobile 1`] = `
<div
  className="ms-Grid"
>
  <div
    className="ms-Grid-row"
  >
    <div
      className="ms-Grid-col ms-sm12 ms-md8 ms-lg8 ms-xl6"
    >
      <span
        className="css-64"
      >
        <h2>
          My Punch Card
        </h2>
      </span>
    </div>
  </div>
  <div
    className="ms-Grid-row"
  >
    <div
      className="ms-Grid-col ms-sm12 ms-md6"
    >
      <span
        className="css-64"
      >
        <h3>
          Goal For The Day
        </h3>
      </span>
      <div
        className="ms-Stack css-65"
      >
        <div
          className="ms-StackItem css-66"
        >
          <div
            className="ms-Stack css-67"
          >
            <div
              className="ms-TextField timeInput-69"
            >
              <div
                className="ms-TextField-wrapper"
              >
                <div
                  className="ms-Stack css-80"
                >
                  <label
                    className="ms-Label root-81"
                  >
                    Hours
                  </label>
                  <button
                    className="ms-Button ms-Button--icon root-82"
                    data-is-focusable={true}
                    id="id__11"
                    onClick={[Function]}
                    onKeyDown={[Function]}
                    onKeyPress={[Function]}
                    onKeyUp={[Function]}
                    onMouseDown={[Function]}
                    onMouseUp={[Function]}
                    title="Info"
                    type="button"
                  >
                    <span
                      className="ms-Button-flexContainer flexContainer-83"
                      data-automationid="splitbuttonprimary"
                    >
                      <i
                        aria-hidden={true}
                        className="ms-Icon root-37 css-87 ms-Button-icon icon-85"
                        data-icon-name="Info"
                        role="presentation"
                        style={
                          Object {
                            "fontFamily": "\\"FabricMDL2Icons\\"",
                          }
                        }
                      >
                        
                      </i>
                    </span>
                  </button>
                </div>
                <div
                  className="ms-TextField-fieldGroup fieldGroup-70"
                >
                  <input
                    aria-invalid={false}
                    aria-labelledby="TextFieldLabel10"
                    className="ms-TextField-field field-71"
                    id="TextField8"
                    onBlur={[Function]}
                    onChange={[Function]}
                    onFocus={[Function]}
                    onInput={[Function]}
                    type="number"
                    value="09"
                  />
                </div>
              </div>
            </div>
            <div
              className="ms-TextField timeInput-69"
            >
              <div
                className="ms-TextField-wrapper"
              >
                <div
                  className="ms-Stack css-80"
                >
                  <label
                    className="ms-Label root-81"
                  >
                    Minutes
                  </label>
                  <button
                    className="ms-Button ms-Button--icon root-82"
                    data-is-focusable={true}
                    id="id__18"
                    onClick={[Function]}
                    onKeyDown={[Function]}
                    onKeyPress={[Function]}
                    onKeyUp={[Function]}
                    onMouseDown={[Function]}
                    onMouseUp={[Function]}
                    title="Info"
                    type="button"
                  >
                    <span
                      className="ms-Button-flexContainer flexContainer-83"
                      data-automationid="splitbuttonprimary"
                    >
                      <i
                        aria-hidden={true}
                        className="ms-Icon root-37 css-87 ms-Button-icon icon-85"
                        data-icon-name="Info"
                        role="presentation"
                        style={
                          Object {
                            "fontFamily": "\\"FabricMDL2Icons\\"",
                          }
                        }
                      >
                        
                      </i>
                    </span>
                  </button>
                </div>
                <div
                  className="ms-TextField-fieldGroup fieldGroup-70"
                >
                  <input
                    aria-invalid={false}
                    aria-labelledby="TextFieldLabel17"
                    className="ms-TextField-field field-71"
                    id="TextField15"
                    onBlur={[Function]}
                    onChange={[Function]}
                    onFocus={[Function]}
                    onInput={[Function]}
                    type="number"
                    value="00"
                  />
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          className="ms-StackItem css-66"
        >
          <div
            className="ms-MessageBar ms-MessageBar-multiline infoBar-88"
          >
            <div
              className="ms-MessageBar-content content-89"
            >
              <div
                aria-hidden={true}
                className="ms-MessageBar-icon iconContainer-90"
              >
                <i
                  aria-hidden={true}
                  className="icon-97"
                  data-icon-name="Info"
                >
                  
                </i>
              </div>
              <div
                aria-live="polite"
                className="ms-MessageBar-text text-92"
                id="MessageBar22"
                role="status"
              >
                <span
                  className="ms-MessageBar-innerText innerText-93"
                />
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
  <br />
  <div
    className="ms-Grid-row"
  >
    <div
      className="ms-Grid-col ms-sm-12 ms-md6"
    >
      <div
        className="ms-Stack css-98"
      >
        <div
          className="ms-StackItem css-99"
        >
          <span
            className="css-64"
          >
            <h3>
              Punched
            </h3>
          </span>
          <div
            className="ms-Viewport"
            style={
              Object {
                "minHeight": 1,
                "minWidth": 1,
              }
            }
          >
            <div
              className="ms-DetailsList is-horizontalConstrained root-100"
              data-automationid="DetailsList"
              data-is-scrollable="false"
            >
              <div
                aria-colcount={1}
                aria-readonly="true"
                aria-rowcount={1}
                role="grid"
              >
                <div
                  className="ms-DetailsList-headerWrapper"
                  onKeyDown={[Function]}
                  role="presentation"
                >
                  <div
                    className="ms-FocusZone css-53 ms-DetailsHeader root-102"
                    data-automationid="DetailsHeader"
                    data-focuszone-id="FocusZone24"
                    onFocus={[Function]}
                    onKeyDown={[Function]}
                    onMouseDownCapture={[Function]}
                    onMouseMove={[Function]}
                    role="row"
                  >
                    <div
                      aria-colindex={1}
                      aria-labelledby="header23-check"
                      className="ms-DetailsHeader-cell ms-DetailsHeader-cellIsCheck cellIsCheck-105"
                      onClick={[Function]}
                      role="columnheader"
                    >
                      <span
                        className="ms-DetailsHeader-checkTooltip"
                      >
                        <div
                          aria-checked={false}
                          className="ms-DetailsRow-check ms-DetailsHeader-check check-103 ms-DetailsRow-check--isHeader ms-Check-checkHost check-118"
                          data-automationid="DetailsRowCheck"
                          data-is-focusable={true}
                          data-selection-toggle={true}
                          id="header23-check"
                          role="checkbox"
                        >
                          <div
                            className="ms-Check root-119"
                          >
                            <i
                              aria-hidden={true}
                              className="ms-Icon root-37 css-87 ms-Check-circle circle-120"
                              data-icon-name="CircleRing"
                              role="presentation"
                              style={
                                Object {
                                  "fontFamily": "\\"FabricMDL2Icons\\"",
                                }
                              }
                            >
                              
                            </i>
                            <i
                              aria-hidden={true}
                              className="ms-Icon root-37 css-87 ms-Check-check check-121"
                              data-icon-name="StatusCircleCheckmark"
                              role="presentation"
                              style={
                                Object {
                                  "fontFamily": "\\"FabricMDL2Icons\\"",
                                }
                              }
                            >
                              
                            </i>
                          </div>
                        </div>
                      </span>
                    </div>
                  </div>
                </div>
                <div
                  className="ms-DetailsList-contentWrapper"
                  onKeyDown={[Function]}
                  role="presentation"
                >
                  <div
                    className="ms-SelectionZone"
                    onClick={[Function]}
                    onContextMenu={[Function]}
                    onDoubleClick={[Function]}
                    onFocusCapture={[Function]}
                    onKeyDown={[Function]}
                    onKeyDownCapture={[Function]}
                    onMouseDown={[Function]}
                    onMouseDownCapture={[Function]}
                    role="presentation"
                  >
                    <div
                      className="ms-FocusZone css-53 focusZone-101"
                      data-focuszone-id="FocusZone25"
                      onBlur={[Function]}
                      onFocus={[Function]}
                      onKeyDown={[Function]}
                      onMouseDownCapture={[Function]}
                    >
                      <div
                        className="ms-List"
                      >
                        <div
                          className="ms-List-surface"
                          role="presentation"
                        />
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
          <br />
        </div>
        <div
          className="ms-StackItem css-66"
        >
          <button
            className="ms-Button ms-Button--primary root-122"
            data-is-focusable={true}
            onClick={[Function]}
            onKeyDown={[Function]}
            onKeyPress={[Function]}
            onKeyUp={[Function]}
            onMouseDown={[Function]}
            onMouseUp={[Function]}
            type="button"
          >
            <span
              className="ms-Button-flexContainer flexContainer-83"
              data-automationid="splitbuttonprimary"
            />
          </button>
        </div>
      </div>
      <div
        dir="ltr"
      >
        <div
          className="ms-TooltipHost root-124"
          onBlurCapture={[Function]}
          onFocusCapture={[Function]}
          onKeyDown={[Function]}
          onMouseEnter={[Function]}
          onMouseLeave={[Function]}
        >
          <div
            className="ms-ProgressIndicator root-125"
          >
            <div
              className="ms-ProgressIndicator-itemName itemName-126"
            >
              Punched
            </div>
            <div
              className="ms-ProgressIndicator-itemProgress itemProgress-128"
            >
              <div
                className="ms-ProgressIndicator-progressTrack progressTrack-129"
              />
              <div
                aria-valuemax={100}
                aria-valuemin={0}
                aria-valuenow={20}
                className="ms-ProgressIndicator-progressBar progressBar-130"
                role="progressbar"
                style={
                  Object {
                    "transition": undefined,
                    "width": "20%",
                  }
                }
              />
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Apps/Punch Card Tablet 1`] = `
<div
  className="ms-Grid"
>
  <div
    className="ms-Grid-row"
  >
    <div
      className="ms-Grid-col ms-sm12 ms-md8 ms-lg8 ms-xl6"
    >
      <span
        className="css-64"
      >
        <h2>
          My Punch Card
        </h2>
      </span>
    </div>
  </div>
  <div
    className="ms-Grid-row"
  >
    <div
      className="ms-Grid-col ms-sm12 ms-md6"
    >
      <span
        className="css-64"
      >
        <h3>
          Goal For The Day
        </h3>
      </span>
      <div
        className="ms-Stack css-65"
      >
        <div
          className="ms-StackItem css-66"
        >
          <div
            className="ms-Stack css-67"
          >
            <div
              className="ms-TextField timeInput-69"
            >
              <div
                className="ms-TextField-wrapper"
              >
                <div
                  className="ms-Stack css-80"
                >
                  <label
                    className="ms-Label root-81"
                  >
                    Hours
                  </label>
                  <button
                    className="ms-Button ms-Button--icon root-82"
                    data-is-focusable={true}
                    id="id__55"
                    onClick={[Function]}
                    onKeyDown={[Function]}
                    onKeyPress={[Function]}
                    onKeyUp={[Function]}
                    onMouseDown={[Function]}
                    onMouseUp={[Function]}
                    title="Info"
                    type="button"
                  >
                    <span
                      className="ms-Button-flexContainer flexContainer-83"
                      data-automationid="splitbuttonprimary"
                    >
                      <i
                        aria-hidden={true}
                        className="ms-Icon root-37 css-87 ms-Button-icon icon-85"
                        data-icon-name="Info"
                        role="presentation"
                        style={
                          Object {
                            "fontFamily": "\\"FabricMDL2Icons\\"",
                          }
                        }
                      >
                        
                      </i>
                    </span>
                  </button>
                </div>
                <div
                  className="ms-TextField-fieldGroup fieldGroup-70"
                >
                  <input
                    aria-invalid={false}
                    aria-labelledby="TextFieldLabel54"
                    className="ms-TextField-field field-71"
                    id="TextField52"
                    onBlur={[Function]}
                    onChange={[Function]}
                    onFocus={[Function]}
                    onInput={[Function]}
                    type="number"
                    value="09"
                  />
                </div>
              </div>
            </div>
            <div
              className="ms-TextField timeInput-69"
            >
              <div
                className="ms-TextField-wrapper"
              >
                <div
                  className="ms-Stack css-80"
                >
                  <label
                    className="ms-Label root-81"
                  >
                    Minutes
                  </label>
                  <button
                    className="ms-Button ms-Button--icon root-82"
                    data-is-focusable={true}
                    id="id__62"
                    onClick={[Function]}
                    onKeyDown={[Function]}
                    onKeyPress={[Function]}
                    onKeyUp={[Function]}
                    onMouseDown={[Function]}
                    onMouseUp={[Function]}
                    title="Info"
                    type="button"
                  >
                    <span
                      className="ms-Button-flexContainer flexContainer-83"
                      data-automationid="splitbuttonprimary"
                    >
                      <i
                        aria-hidden={true}
                        className="ms-Icon root-37 css-87 ms-Button-icon icon-85"
                        data-icon-name="Info"
                        role="presentation"
                        style={
                          Object {
                            "fontFamily": "\\"FabricMDL2Icons\\"",
                          }
                        }
                      >
                        
                      </i>
                    </span>
                  </button>
                </div>
                <div
                  className="ms-TextField-fieldGroup fieldGroup-70"
                >
                  <input
                    aria-invalid={false}
                    aria-labelledby="TextFieldLabel61"
                    className="ms-TextField-field field-71"
                    id="TextField59"
                    onBlur={[Function]}
                    onChange={[Function]}
                    onFocus={[Function]}
                    onInput={[Function]}
                    type="number"
                    value="00"
                  />
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          className="ms-StackItem css-66"
        >
          <div
            className="ms-MessageBar ms-MessageBar-multiline infoBar-88"
          >
            <div
              className="ms-MessageBar-content content-89"
            >
              <div
                aria-hidden={true}
                className="ms-MessageBar-icon iconContainer-90"
              >
                <i
                  aria-hidden={true}
                  className="icon-97"
                  data-icon-name="Info"
                >
                  
                </i>
              </div>
              <div
                aria-live="polite"
                className="ms-MessageBar-text text-92"
                id="MessageBar66"
                role="status"
              >
                <span
                  className="ms-MessageBar-innerText innerText-93"
                />
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
  <br />
  <div
    className="ms-Grid-row"
  >
    <div
      className="ms-Grid-col ms-sm-12 ms-md6"
    >
      <div
        className="ms-Stack css-98"
      >
        <div
          className="ms-StackItem css-99"
        >
          <span
            className="css-64"
          >
            <h3>
              Punched
            </h3>
          </span>
          <div
            className="ms-Viewport"
            style={
              Object {
                "minHeight": 1,
                "minWidth": 1,
              }
            }
          >
            <div
              className="ms-DetailsList is-horizontalConstrained root-100"
              data-automationid="DetailsList"
              data-is-scrollable="false"
            >
              <div
                aria-colcount={1}
                aria-readonly="true"
                aria-rowcount={1}
                role="grid"
              >
                <div
                  className="ms-DetailsList-headerWrapper"
                  onKeyDown={[Function]}
                  role="presentation"
                >
                  <div
                    className="ms-FocusZone css-53 ms-DetailsHeader root-102"
                    data-automationid="DetailsHeader"
                    data-focuszone-id="FocusZone68"
                    onFocus={[Function]}
                    onKeyDown={[Function]}
                    onMouseDownCapture={[Function]}
                    onMouseMove={[Function]}
                    role="row"
                  >
                    <div
                      aria-colindex={1}
                      aria-labelledby="header67-check"
                      className="ms-DetailsHeader-cell ms-DetailsHeader-cellIsCheck cellIsCheck-105"
                      onClick={[Function]}
                      role="columnheader"
                    >
                      <span
                        className="ms-DetailsHeader-checkTooltip"
                      >
                        <div
                          aria-checked={false}
                          className="ms-DetailsRow-check ms-DetailsHeader-check check-103 ms-DetailsRow-check--isHeader ms-Check-checkHost check-118"
                          data-automationid="DetailsRowCheck"
                          data-is-focusable={true}
                          data-selection-toggle={true}
                          id="header67-check"
                          role="checkbox"
                        >
                          <div
                            className="ms-Check root-119"
                          >
                            <i
                              aria-hidden={true}
                              className="ms-Icon root-37 css-87 ms-Check-circle circle-120"
                              data-icon-name="CircleRing"
                              role="presentation"
                              style={
                                Object {
                                  "fontFamily": "\\"FabricMDL2Icons\\"",
                                }
                              }
                            >
                              
                            </i>
                            <i
                              aria-hidden={true}
                              className="ms-Icon root-37 css-87 ms-Check-check check-121"
                              data-icon-name="StatusCircleCheckmark"
                              role="presentation"
                              style={
                                Object {
                                  "fontFamily": "\\"FabricMDL2Icons\\"",
                                }
                              }
                            >
                              
                            </i>
                          </div>
                        </div>
                      </span>
                    </div>
                  </div>
                </div>
                <div
                  className="ms-DetailsList-contentWrapper"
                  onKeyDown={[Function]}
                  role="presentation"
                >
                  <div
                    className="ms-SelectionZone"
                    onClick={[Function]}
                    onContextMenu={[Function]}
                    onDoubleClick={[Function]}
                    onFocusCapture={[Function]}
                    onKeyDown={[Function]}
                    onKeyDownCapture={[Function]}
                    onMouseDown={[Function]}
                    onMouseDownCapture={[Function]}
                    role="presentation"
                  >
                    <div
                      className="ms-FocusZone css-53 focusZone-101"
                      data-focuszone-id="FocusZone69"
                      onBlur={[Function]}
                      onFocus={[Function]}
                      onKeyDown={[Function]}
                      onMouseDownCapture={[Function]}
                    >
                      <div
                        className="ms-List"
                      >
                        <div
                          className="ms-List-surface"
                          role="presentation"
                        />
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
          <br />
        </div>
        <div
          className="ms-StackItem css-66"
        >
          <button
            className="ms-Button ms-Button--primary root-122"
            data-is-focusable={true}
            onClick={[Function]}
            onKeyDown={[Function]}
            onKeyPress={[Function]}
            onKeyUp={[Function]}
            onMouseDown={[Function]}
            onMouseUp={[Function]}
            type="button"
          >
            <span
              className="ms-Button-flexContainer flexContainer-83"
              data-automationid="splitbuttonprimary"
            />
          </button>
        </div>
      </div>
      <div
        dir="ltr"
      >
        <div
          className="ms-TooltipHost root-124"
          onBlurCapture={[Function]}
          onFocusCapture={[Function]}
          onKeyDown={[Function]}
          onMouseEnter={[Function]}
          onMouseLeave={[Function]}
        >
          <div
            className="ms-ProgressIndicator root-125"
          >
            <div
              className="ms-ProgressIndicator-itemName itemName-126"
            >
              Punched
            </div>
            <div
              className="ms-ProgressIndicator-itemProgress itemProgress-128"
            >
              <div
                className="ms-ProgressIndicator-progressTrack progressTrack-129"
              />
              <div
                aria-valuemax={100}
                aria-valuemin={0}
                aria-valuenow={20}
                className="ms-ProgressIndicator-progressBar progressBar-130"
                role="progressbar"
                style={
                  Object {
                    "transition": undefined,
                    "width": "20%",
                  }
                }
              />
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Apps/Time Tool App 1`] = `
<div>
  <div
    className="ms-Grid"
    dir="ltr"
  >
    <div
      className="ms-Grid-col ms-lg2 ms-xl4"
    />
    <div
      className=" ms-Grid-col ms-sm12 ms-lg8 ms-xl4 ms-depth-16 ms-bgColor-gray10 "
    >
      <div
        className="ms-Stack css-139"
      >
        <span
          className="css-140"
        >
          Time Tool
        </span>
        <span
          className="css-64"
        >
          1. Convert date & time for any timezone into a timestamp.
        </span>
        <div
          className="ms-Stack css-98"
        >
          <div
            className="ms-Stack css-131"
          >
            <div
              className="ms-StackItem css-66"
            >
              <div
                className="ms-DatePicker root-141"
              >
                <div
                  aria-haspopup="true"
                >
                  <div
                    className="ms-TextField textField-145"
                  >
                    <div
                      className="ms-TextField-wrapper"
                    >
                      <label
                        className="ms-Label root-81"
                        htmlFor="DatePicker112-label"
                        id="TextFieldLabel116"
                      >
                        Date
                      </label>
                      <div
                        className="ms-TextField-fieldGroup fieldGroup-70"
                      >
                        <input
                          aria-expanded={false}
                          aria-invalid={false}
                          aria-labelledby="TextFieldLabel116"
                          className="ms-TextField-field field-146"
                          id="DatePicker112-label"
                          onBlur={[Function]}
                          onChange={[Function]}
                          onClick={[Function]}
                          onFocus={[Function]}
                          onInput={[Function]}
                          onKeyDown={[Function]}
                          readOnly={true}
                          required={false}
                          role="combobox"
                          type="text"
                          value="Fri Nov 27 2020"
                        />
                        <i
                          aria-hidden={true}
                          className="ms-DatePicker-event--with-label msDatePickerDisabled icon-148"
                          data-icon-name="Calendar"
                          onClick={[Function]}
                        >
                          
                        </i>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
            <div
              className="ms-StackItem css-66"
            >
              <div
                className="ms-TextField root-132"
              >
                <div
                  className="ms-TextField-wrapper"
                >
                  <label
                    className="ms-Label root-81"
                    htmlFor="TextField117"
                    id="TextFieldLabel119"
                  >
                    Time
                  </label>
                  <div
                    className="ms-TextField-fieldGroup fieldGroup-70"
                  >
                    <input
                      aria-invalid={false}
                      aria-labelledby="TextFieldLabel119"
                      className="ms-TextField-field field-146"
                      id="TextField117"
                      onBlur={[Function]}
                      onChange={[Function]}
                      onFocus={[Function]}
                      onInput={[Function]}
                      onKeyDown={[Function]}
                      onMouseDown={[Function]}
                      onMouseUp={[Function]}
                      onPaste={[Function]}
                      type="text"
                      value="08:55"
                    />
                    <i
                      aria-hidden={true}
                      className="icon-150"
                      data-icon-name="Clock"
                    >
                      
                    </i>
                  </div>
                </div>
              </div>
            </div>
          </div>
          <div
            className="ms-Stack css-98"
          >
            <div
              className="ms-StackItem css-66"
            >
              <div
                className="ms-Dropdown-container"
              >
                <label
                  className="ms-Label ms-Dropdown-label root-167"
                  id="Dropdown120-label"
                >
                  Timezone
                </label>
                <div
                  aria-expanded="false"
                  aria-haspopup="listbox"
                  aria-labelledby="Dropdown120-label Dropdown120-option"
                  className="ms-Dropdown dropdown-151"
                  data-is-focusable={true}
                  id="Dropdown120"
                  onBlur={[Function]}
                  onChange={[Function]}
                  onClick={[Function]}
                  onFocus={[Function]}
                  onKeyDown={[Function]}
                  onKeyUp={[Function]}
                  onMouseDown={[Function]}
                  role="listbox"
                  tabIndex={0}
                >
                  <span
                    aria-atomic={true}
                    aria-invalid={false}
                    aria-live="polite"
                    aria-posinset={252}
                    aria-selected={true}
                    aria-setsize={594}
                    className="ms-Dropdown-title title-178"
                    id="Dropdown120-option"
                    role="option"
                  >
                    Asia/Calcutta
                  </span>
                  <span
                    className="ms-Dropdown-caretDownWrapper caretDownWrapper-153"
                  >
                    <i
                      aria-hidden={true}
                      className="ms-Dropdown-caretDown caretDown-168"
                      data-icon-name="ChevronDown"
                    >
                      
                    </i>
                  </span>
                </div>
              </div>
            </div>
            <div
              className="ms-StackItem css-66"
            >
              <div
                className="ms-Checkbox is-enabled root-169"
              >
                <input
                  aria-checked="false"
                  aria-label="Is end of time?"
                  checked={false}
                  className="input-170"
                  id="checkbox-121"
                  onBlur={[Function]}
                  onChange={[Function]}
                  onFocus={[Function]}
                  type="checkbox"
                />
                <label
                  className="ms-Checkbox-label label-171"
                  htmlFor="checkbox-121"
                >
                  <div
                    className="ms-Checkbox-checkbox checkbox-172"
                  >
                    <i
                      aria-hidden={true}
                      className="ms-Checkbox-checkmark checkmark-175"
                      data-icon-name="CheckMark"
                    >
                      
                    </i>
                  </div>
                  <span
                    aria-hidden="true"
                    className="ms-Checkbox-text text-174"
                  >
                    Is end of time?
                  </span>
                </label>
              </div>
            </div>
          </div>
        </div>
        <div
          className="ms-Stack css-67"
        >
          <div
            className="ms-StackItem css-66"
          >
            <div
              className="ms-TextField root-132"
            >
              <div
                className="ms-TextField-wrapper"
              >
                <div
                  className="ms-Stack css-80"
                >
                  <label
                    className="ms-Label root-81"
                  >
                    Timestamp
                  </label>
                  <button
                    className="ms-Button ms-Button--icon root-82"
                    data-is-focusable={true}
                    id="id__125"
                    onClick={[Function]}
                    onKeyDown={[Function]}
                    onKeyPress={[Function]}
                    onKeyUp={[Function]}
                    onMouseDown={[Function]}
                    onMouseUp={[Function]}
                    title="Info"
                    type="button"
                  >
                    <span
                      className="ms-Button-flexContainer flexContainer-83"
                      data-automationid="splitbuttonprimary"
                    >
                      <i
                        aria-hidden={true}
                        className="ms-Icon root-37 css-87 ms-Button-icon icon-85"
                        data-icon-name="Info"
                        role="presentation"
                        style={
                          Object {
                            "fontFamily": "\\"FabricMDL2Icons\\"",
                          }
                        }
                      >
                        
                      </i>
                    </span>
                  </button>
                </div>
                <div
                  className="ms-TextField-fieldGroup fieldGroup-70"
                >
                  <input
                    aria-invalid={false}
                    aria-labelledby="TextFieldLabel124"
                    className="ms-TextField-field field-146"
                    id="TextField122"
                    onBlur={[Function]}
                    onChange={[Function]}
                    onClick={[Function]}
                    onFocus={[Function]}
                    onInput={[Function]}
                    readOnly={true}
                    style={
                      Object {
                        "border": "2px lightgray dashed",
                      }
                    }
                    type="text"
                    value="1606447500000"
                  />
                  <i
                    aria-hidden={true}
                    className="icon-150"
                    data-icon-name="Copy"
                  >
                    
                  </i>
                </div>
              </div>
            </div>
          </div>
          <div
            className="ms-StackItem css-66"
          >
            <button
              className="ms-Button ms-Button--default root-176"
              data-is-focusable={true}
              onClick={[Function]}
              onKeyDown={[Function]}
              onKeyPress={[Function]}
              onKeyUp={[Function]}
              onMouseDown={[Function]}
              onMouseUp={[Function]}
              type="button"
            >
              <span
                className="ms-Button-flexContainer flexContainer-83"
                data-automationid="splitbuttonprimary"
              >
                <i
                  aria-hidden={true}
                  className="ms-Icon root-37 css-87 ms-Button-icon icon-85"
                  data-icon-name="Trash"
                  role="presentation"
                  style={
                    Object {
                      "fontFamily": "\\"FabricMDL2Icons\\"",
                    }
                  }
                >
                  
                </i>
                <span
                  className="ms-Button-textContainer textContainer-84"
                >
                  <span
                    className="ms-Button-label label-123"
                    id="id__129"
                  >
                    Clear Local Storage
                  </span>
                </span>
              </span>
            </button>
          </div>
        </div>
        <div
          className="ms-StackItem css-66"
        >
          <span
            className="css-64"
          >
            2. Convert a timestamp to date in the time-zone selected above.
          </span>
        </div>
        <div
          className="ms-StackItem css-66"
        >
          <div
            className="ms-TextField root-132"
          >
            <div
              className="ms-TextField-wrapper"
            >
              <div
                className="ms-Stack css-80"
              >
                <label
                  className="ms-Label root-81"
                >
                  Paste a timestamp
                </label>
                <button
                  className="ms-Button ms-Button--icon root-82"
                  data-is-focusable={true}
                  id="id__135"
                  onClick={[Function]}
                  onKeyDown={[Function]}
                  onKeyPress={[Function]}
                  onKeyUp={[Function]}
                  onMouseDown={[Function]}
                  onMouseUp={[Function]}
                  title="Info"
                  type="button"
                >
                  <span
                    className="ms-Button-flexContainer flexContainer-83"
                    data-automationid="splitbuttonprimary"
                  >
                    <i
                      aria-hidden={true}
                      className="ms-Icon root-37 css-87 ms-Button-icon icon-85"
                      data-icon-name="Info"
                      role="presentation"
                      style={
                        Object {
                          "fontFamily": "\\"FabricMDL2Icons\\"",
                        }
                      }
                    >
                      
                    </i>
                  </span>
                </button>
              </div>
              <div
                className="ms-TextField-fieldGroup fieldGroup-70"
              >
                <input
                  aria-describedby="TextFieldDescription133"
                  aria-invalid={false}
                  className="ms-TextField-field field-71"
                  id="TextField132"
                  onBlur={[Function]}
                  onChange={[Function]}
                  onClick={[Function]}
                  onFocus={[Function]}
                  onInput={[Function]}
                  placeholder="Try a timestamp..."
                  type="text"
                  value=""
                />
              </div>
            </div>
            <span
              id="TextFieldDescription133"
            >
              <span
                className="css-177"
              >
                Thu Jan 01 1970 05:30:00 GMT+0530 (Asia/Calcutta)
              </span>
              
            </span>
          </div>
        </div>
      </div>
      <div
        className="ms-Grid-col ms-lg2 ms-xl4"
      />
    </div>
  </div>
</div>
`;

exports[`Storyshots Components/Custom Label - Variant A Default 1`] = `
<div
  className="ms-Stack css-80"
>
  <label
    className="ms-Label root-81"
  >
    Timestamp
  </label>
  <button
    className="ms-Button ms-Button--icon root-82"
    data-is-focusable={true}
    id="id__143"
    onClick={[Function]}
    onKeyDown={[Function]}
    onKeyPress={[Function]}
    onKeyUp={[Function]}
    onMouseDown={[Function]}
    onMouseUp={[Function]}
    title="Info"
    type="button"
  >
    <span
      className="ms-Button-flexContainer flexContainer-83"
      data-automationid="splitbuttonprimary"
    >
      <i
        aria-hidden={true}
        className="ms-Icon root-37 css-87 ms-Button-icon icon-85"
        data-icon-name="Info"
        role="presentation"
        style={
          Object {
            "fontFamily": "\\"FabricMDL2Icons\\"",
          }
        }
      >
        
      </i>
    </span>
  </button>
</div>
`;

exports[`Storyshots Components/Custom Label Default 1`] = `
<div
  className="ms-Stack css-80"
>
  <label
    className="ms-Label root-81"
  >
    Timestamp
  </label>
  <button
    className="ms-Button ms-Button--icon root-82"
    data-is-focusable={true}
    id="my-callout"
    onClick={[Function]}
    onKeyDown={[Function]}
    onKeyPress={[Function]}
    onKeyUp={[Function]}
    onMouseDown={[Function]}
    onMouseUp={[Function]}
    title="Info"
    type="button"
  >
    <span
      className="ms-Button-flexContainer flexContainer-83"
      data-automationid="splitbuttonprimary"
    >
      <i
        aria-hidden={true}
        className="ms-Icon root-37 css-87 ms-Button-icon icon-85"
        data-icon-name="Info"
        role="presentation"
        style={
          Object {
            "fontFamily": "\\"FabricMDL2Icons\\"",
          }
        }
      >
        
      </i>
    </span>
  </button>
</div>
`;

exports[`Storyshots Components/Simple Form Default 1`] = `
<form
  onSubmit={[Function]}
>
  <div
    className="ms-Stack css-131"
  >
    <div
      className="ms-TextField root-132"
    >
      <div
        className="ms-TextField-wrapper"
      >
        <div
          className="ms-TextField-fieldGroup fieldGroup-70"
        >
          <input
            aria-invalid={false}
            className="ms-TextField-field field-71"
            id="TextField147"
            onBlur={[Function]}
            onChange={[Function]}
            onFocus={[Function]}
            onInput={[Function]}
            placeholder="Punch Card Name..."
            type="text"
            value=""
          />
        </div>
      </div>
    </div>
    <button
      className="ms-Button ms-Button--icon ms-hiddenMdUp root-179"
      data-is-focusable={true}
      onClick={[Function]}
      onKeyDown={[Function]}
      onKeyPress={[Function]}
      onKeyUp={[Function]}
      onMouseDown={[Function]}
      onMouseUp={[Function]}
      title="Add Punch Card"
      type="submit"
    >
      <span
        className="ms-Button-flexContainer flexContainer-83"
        data-automationid="splitbuttonprimary"
      >
        <i
          aria-hidden={true}
          className="ms-Icon root-37 css-87 ms-Button-icon icon-85"
          data-icon-name="Add"
          role="presentation"
          style={
            Object {
              "fontFamily": "\\"FabricMDL2Icons\\"",
            }
          }
        >
          
        </i>
      </span>
    </button>
    <button
      className="ms-Button ms-Button--primary ms-hiddenSm root-122"
      data-is-focusable={true}
      onClick={[Function]}
      onKeyDown={[Function]}
      onKeyPress={[Function]}
      onKeyUp={[Function]}
      onMouseDown={[Function]}
      onMouseUp={[Function]}
      title="Add Punch Card"
      type="submit"
    >
      <span
        className="ms-Button-flexContainer flexContainer-83"
        data-automationid="splitbuttonprimary"
      >
        <i
          aria-hidden={true}
          className="ms-Icon root-37 css-87 ms-Button-icon icon-85"
          data-icon-name="Add"
          role="presentation"
          style={
            Object {
              "fontFamily": "\\"FabricMDL2Icons\\"",
            }
          }
        >
          
        </i>
        <span
          className="ms-Button-textContainer textContainer-84"
        >
          <span
            className="ms-Button-label label-123"
            id="id__153"
          >
            Add Punch Card
          </span>
        </span>
      </span>
    </button>
  </div>
</form>
`;

exports[`Storyshots POCs/Test Pivot Test 1`] = `
<div
  className="ms-Stack css-45"
>
  <div
    aria-label="Basic Pivot Example"
    className="ms-depth-8"
    role="toolbar"
  >
    <div
      className="ms-FocusZone css-53 ms-Pivot root-46"
      data-focuszone-id="FocusZone1"
      onFocus={[Function]}
      onKeyDown={[Function]}
      onMouseDownCapture={[Function]}
      role="tablist"
    >
      <button
        aria-selected={true}
        className="ms-Button ms-Button--action ms-Button--command ms-Pivot-link is-selected linkIsSelected-54"
        data-content="Convert 2 Timestamp"
        data-is-focusable={true}
        data-order={1}
        data-title="My Files Title"
        id="Pivot0-Tab0"
        name="Convert 2 Timestamp"
        onClick={[Function]}
        onKeyDown={[Function]}
        onKeyPress={[Function]}
        onKeyUp={[Function]}
        onMouseDown={[Function]}
        onMouseUp={[Function]}
        role="tab"
        type="button"
      >
        <span
          className="ms-Button-flexContainer flexContainer-55"
          data-automationid="splitbuttonprimary"
        >
          <span
            className="ms-Pivot-linkContent linkContent-50"
          >
            <span
              className="ms-Pivot-text text-51"
            >
               
              Convert 2 Timestamp
            </span>
          </span>
        </span>
      </button>
      <button
        aria-selected={false}
        className="ms-Button ms-Button--action ms-Button--command ms-Pivot-link link-62"
        data-content="Convert 2 Date"
        data-is-focusable={true}
        id="Pivot0-Tab1"
        name="Convert 2 Date"
        onClick={[Function]}
        onKeyDown={[Function]}
        onKeyPress={[Function]}
        onKeyUp={[Function]}
        onMouseDown={[Function]}
        onMouseUp={[Function]}
        role="tab"
        type="button"
      >
        <span
          className="ms-Button-flexContainer flexContainer-55"
          data-automationid="splitbuttonprimary"
        >
          <span
            className="ms-Pivot-linkContent linkContent-50"
          >
            <span
              className="ms-Pivot-text text-51"
            >
               
              Convert 2 Date
            </span>
          </span>
        </span>
      </button>
    </div>
    <div
      aria-hidden={false}
      aria-labelledby="Pivot0-Tab0"
      className="itemContainer-47"
      hidden={false}
      role="tabpanel"
    >
      <div>
        <div
          className="ms-Stack css-45"
        >
          <span
            className="css-63"
          >
            Convert 2 Timestamp
          </span>
        </div>
      </div>
    </div>
  </div>
</div>
`;
